<resources>
    <string name="app_name">Inventory</string>
    <string name="dummy_data">Dummy Data</string>
    <string name="delete">Delete</string>
    <string name="noProduct">No Product to show</string>
    <string name="addProduct">Start by adding a new Product</string>
    <string name="productName">Name</string>
    <string name="productSupplier">Supplier name</string>
    <string name="supplierEmail">Supplier email</string>
    <string name="productPrice">Price:</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order Product</string>
    <string name="addNewProduct">Add Product</string>
    <string name="editProduct">Edit Product</string>
    <string name="error_in_inserting">Error in inserting new Product data</string>
    <string name="product_added">Product saved into Database</string>
    <string name="product_failed">Failed to </string>
    <string name="product_success">Product </string>
    <string name="update_product_failed">Failed to update product data</string>
    <string name="update_product_success">Product\'s data is updated</string>
    <string name="unsaved_changes_dialog">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_confirmation_message">Do you want to delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="negative_quantity_alert">Quantity cannot be negative number</string>
    <string name="uploadImage">upload image</string>
    <string name="inventory">Inventory</string>
    <string name="buy">Buy</string>
    <string name="value">Est.value $</string>
    <string name="feel_empty_fields">Please feel empty fields</string>
</resources>
